--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "GitHub Autocomplete"
+  "name": "Omnicat"
 , "version": "1.0"
 , "description": "Autocomplete GitHub repositories in Omnibox"
 , "icons": {
