--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -3,9 +3,9 @@
 , "version": "1.0.2"
 , "description": "Autocomplete GitHub repositories in Omnibox"
 , "icons": {
-    "16":  "github_icon.png"
-  , "48":  "icon48.png"
-  , "128": "icon128.png" }
+    "16":  "images/github_icon.png"
+  , "48":  "images/icon48.png"
+  , "128": "images/icon128.png" }
 , "homepage_url": "http://omnicat.icanscale.com"
 , "omnibox": { "keyword": "gh" }
 , "background_page": "background.html"
