Options page with GitHub username and token input
Towards #3

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -9,5 +9,6 @@
 , "homepage_url": "http://omnicat.icanscale.com"
 , "omnibox": { "keyword": "gh" }
 , "background_page": "background.html"
+, "options_page": "options.html"
 , "permissions": [ "tabs", "https://lackac.cloudant.com/", "http://localhost/" ]
 }
